# gw2-addon-profiler

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
cmake/: mingw-static-pthread.specs  mingw-w64-toolchain.cmake
def/: nexus_profiler.def
src/: addon.cpp  addon.h  dllmain.cpp  hooks.cpp  hooks.h  imgui_impl.cpp  imgui_impl.h  log.cpp  log.h  profiler.cpp  profiler.h  proxy.cpp  proxy.h  ui.cpp  ui.h
